# PlexClaw

./: .coverage  .env.example  .env.example.local  .gitignore  AGENTS.md  BUILDSTATUS.md  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml  run.sh
.claude/: settings.local.json.example
.githooks/: pre-push
.github/: copilot-instructions.md
app/: __init__.py  analytics_routes.py  archive_normalizer.py  config.py  event_store.py  fs_routes.py  git_routes.py  hooks.py  main.py  mcp_routes.py  mock_sdk.py  normalizer.py  port_check.py  provider_defaults.py  runtime_sdk.py  schemas.py  websocket_manager.py
docs/: CANNIBALIZATION.md  README.md  competitive-gui-roadmap.md  frontend-architecture.md  frontend-phase-plan.md
frontend/: app-shell.html  archive-utils.js  index.html  package.json  playwright.config.mjs  playwright.live.config.mjs  plexclaw-ui-canonical.html  sdk-bridge-client.js  sdk-bridge-patch.md
scripts/: doctor-local-claude.sh  doctor_claude_sdk.py  probe_local_provider_contract.py  setup-git-hooks.sh  use_local_claude_sdk_env.sh  validate.sh  verify_local_claude_stack.sh
tests/: conftest.py  test_analytics.py  test_archive_normalizer.py  test_archive_normalizer_extended.py  test_archive_replay.py  test_archive_replay_tool_completed.py  test_cloud_models_env.py  test_config.py  test_cors_config.py  test_event_store.py  test_event_store_branches.py  test_event_store_extended.py  test_event_store_fixture_lock_reset.py  test_event_store_search_linear_rows.py  test_export_markdown.py  test_frontend_entrypoints.py  (+68 more)
(+33 files in other folders)
